[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" path="res://themes/rpg_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scripts/2d/character_select.gd" id="2_script"]

[node name="CharacterSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_theme")
script = ExtResource("2_script")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.04, 0.06, 0.12, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
size_flags_vertical = 3

[node name="SlotsContainer" type="HBoxContainer" parent="VBox"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Spacer2" type="Control" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="HintLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.816, 0.847, 0.878, 1)
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1
